# sample-apps-for-robotics-platforms

./: CONTRIBUTING.md  README.md
.github/workflows/: quic-organization-repolinter.yml
AWS-Samples/AWS-Sample-Applications/: README.md
AWS-Samples/AWS-Samples-Application/: README.md
C2D-Samples/: README.md
C2D-Samples/src/: Makefile  demo.yuv
Device-info/: README.md
Device-info/src/: Makefile  qrb5165_info.c
FastCV-Samples/: README.md
FastCV-Samples/fastcvArithmetic/: Makefile  UbuntuARM.min
FastCV-Samples/fastcvcolorconversion/: Makefile  UbuntuARM.min
FastCV-Samples/fastcvdownscale/: Makefile  UbuntuARM.min
GPIO-samples/: README.md
GPIO-samples/src/: Makefile  qrb5165_platform.c
Gstreamer-Applications/: Makefile  README.md
Gstreamer-Applications/gst_alsa/: README.md
Gstreamer-Applications/gst_audio/: Makefile  README.md  audio_playback.c  audio_record.c
Gstreamer-Applications/gst_camera/: Makefile  README.md  ispcam_display.c  usbcam_display.c
Gstreamer-Applications/gst_encode_decode/: Makefile  README.md  ispcam_encode_mp4.c
Gstreamer-Applications/gst_gui_app/: README.md  gui_app.pro  main.cpp  qgstpipeline.cpp  qgstpipeline.h  qgstthreadcontroller.cpp  qgstthreadcontroller.h  window.cpp
Gstreamer-Applications/gst_streaming/: Makefile  README.md  tcp_server.c
Gstreamer-Applications/gst_tflite/: README.md
Gstreamer-Applications/gst_transform/: Makefile  README.md  transform_display.c
Gstreamer-TFlite/: README.md
Gstreamer-TFlite/src/: tflite_object_detection.c
HexgonSDK-Image-classification/: README.md
OpenCL-Application/: README.md
OpenCL-Application/FFT/: 0001-OpenCL-Sample-App-FFT.patch
OpenGLES-Application/: 0001-Adapter-Opengles-API.patch  0001-Add-opengles-demo.patch  0001-Modify-opengles-demo.patch  README.md  weston.sh
OpenMAX-Video/: README.md  makefile
RB1RB2/: CONTRIBUTING.md  README.md  README.txt.txt
RB5/linux_kernel_4_x/AI-ML-apps/People-Detection-YoloV5/src/gst-plugin-mle/: CMakeLists.txt  config.h.in
RB5/linux_kernel_4_x/AI-ML-apps/People-Detection-YoloV5/src/gst-plugin-mle/mle_engine/: common_utils.h  ml_engine_impl.cc  ml_engine_intf.h  snpe_base.cc  snpe_base.h  snpe_detection.cc  snpe_detection.h  snpe_yolodetection.cc  snpe_yolodetection.h
RB5/linux_kernel_4_x/AI-ML-apps/People-Detection-YoloV5/src/gst-plugin-mle/mle_gst_snpe/: CMakeLists.txt  mle_snpe.cc  mle_snpe.h  mle_snpeyolov5n.config
RB5/linux_kernel_4_x/AI-ML-apps/gst_mle_oss/gst_snpe/mle_engine/: CMakeLists.txt  common_utils.h  ml_engine_impl.cc  ml_engine_intf.h  snpe_base.cc  snpe_base.h  snpe_detection.cc  snpe_segmentation.cc  snpe_segmentation.h  snpe_single_ssd.cc  snpe_single_ssd.h
RB5/linux_kernel_4_x/AI-ML-apps/gst_mle_oss/gst_snpe/mle_gst_snpe/: CMakeLists.txt  mle_snpe.cc  mle_snpe.config  mle_snpe.h
RB5/linux_kernel_4_x/AI-ML-apps/gst_mle_oss/gst_tflite/: CMakeLists.txt  README.txt
RB5/linux_kernel_4_x/AI-ML-apps/gst_mle_oss/gst_tflite/mle_engine/: CMakeLists.txt  tflite_base.cc  tflite_base.h  tflite_posenet.cc  tflite_posenet.h  tflite_segmentation.cc  tflite_segmentation.h
RB5/linux_kernel_4_x/AI-ML-apps/gst_mle_oss/gst_tflite/mle_gst_tflite/: CMakeLists.txt  mle_tflite.cc  mle_tflite.config  mle_tflite.h
RB5/linux_kernel_4_x/People-Detection-YoloV5/src/gst-plugin-mle/mle_engine/: CMakeLists.txt
RB5/linux_kernel_5_x/AI-ML-apps/AI_Heatmap_Solutions/src/: CMakeLists.txt  Configuration.cpp  DecodeQueue.cpp  ModelInference.cpp  SNPERuntime.cpp  StreamDecode.cpp  StreamEncode.cpp  YOLOv5Snpe.cpp  main.cpp
RB5/linux_kernel_5_x/ROS-apps/ROS-IMU/imu-ros2node/: CMakeLists.txt
RB5/linux_kernel_5_x/ROS-apps/ROS-IMU/imu-ros2node/src/: imu_node_test.cpp
RB5/linux_kernel_5_x/ROS-apps/ROS-IMU/sensors-client/: configure.ac
RB5/linux_kernel_5_x/ROS-apps/ROS-IMU/sensors-client/src/: imu_client.cpp
RB5LU2.0/: README.txt.txt
ROS-Caffe/: README.md
ROS-TFLite/: README.md
ROS2-IMU/: README.md
ROS2-IMU/imu-ros2node/: package.xml  readme.txt
ROS2-IMU/sensors-client/: Makefile.am
ROS2-IMU/sensors-client/inc/: imu_client.hpp
ROS2-IMU/sensors-client/src/: imu_client_test.cpp
ROS2-IMU/sensors-daemon/: Android.bp  Makefile.am  configure.ac
ROS2-IMU/sensors-daemon/inc/: sns_imud_ros.h  ssc_connection_reference.h  ssc_suid_util.h
ROS2-IMU/sensors-daemon/src/: sns_client_example.cpp  ssc_connection_reference.cpp
WIFI-OnBoarding/: LICENSE  README.md
WIFI-OnBoarding/wifi/: wifi.c  (+7 more)
Weston-Client-Application/: README.md  simple-egl.c  weston.sh
camera-hal3-sample/: README.md
gst-python-samples/: RB5-Gstreamer-Plugin-Usecase.docx  README.md
gst_mle_oss/: README.md
gst_webrtc/: README.txt
kernel-demo/: Makefile  README.md  led.c
rb5-sensor-collection-system/: LICENSE  README.md  install_on_rb5.sh  make_package.sh  pull_logs.sh  read_magnetometer.c  sensors-see-qti-dev_0-r0_arm64.deb  tdk-thermistor-app.c
rb5-sensor-collection-system/libsee_sensor/: CMakeLists.txt  README.md  build.sh  prepare-host.sh  prepare-target.sh  update-code.sh
rb5-sensor-collection-system/libsee_sensor/api/: see_sensor.h
rb5-sensor-collection-system/libsee_sensor/config/: qrb5165_icm4x6xx_0.json.m0051  qrb5165_icp101xx_0.json.m0051
rb5-sensor-collection-system/libsee_sensor/include/cutils/: android_reboot.h  aref.h  ashmem.h  atomic.h  bitops.h  debugger.h  klog.h  partition_utils.h  properties.h  property_ops.h  stdatomic.h  str_parms.h  threads.h  trace.h
rb5-sensor-collection-system/libsee_sensor/include/cutils/sys/: system_properties.h
rb5-sensor-collection-system/libsee_sensor/src/: log_sensor_icm4x6xx.c  log_sensor_icp101xxx.c  see_sensor_common.cpp  see_sensor_common.hpp  see_sensor_icm4x6xx.cpp  see_sensor_icm4x6xx.hpp  see_sensor_icp101xx.cpp  see_sensor_icp101xx.hpp  test_see_sensor_icm4x6xx.c  test_see_sensor_icp101xx.c
simple_http_ws_server/: server.js
snpe_classification/: Makefile  README.md  snpe_classification.c  snpe_classification.config  weston.sh
snpe_detection/: Makefile  README.md
sns_client_test/: README.md
tflite_posenet/: Makefile  README.md
tflite_segmentation/: Makefile  README.md
(+479 files in other folders)
